@@ -4,61 +4,57 @@ import java.sql.SQLException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Scanner;
-
+import services.transanction_services;
 import Utility.Display;
 import Utility.Utilities;
 import Utility.db_Utilities;
 
 public class reservation_services {
+public  static final Scanner input = new Scanner(System.in);
+    public static boolean isBookInStock(int id) throws SQLException {
+        HashMap<String, String> bookRecord = db_Utilities.fetch_record("id", "books", id);
 
-    public static boolean isBookInStock(String isbn) throws SQLException {
-        HashMap<String, List<String>> bookRecord = db_Utilities.fetchAllRecords("books", isbn);
+        int currentQuantity ;
         if (!bookRecord.isEmpty()) {
-            int currentQuantity = Integer.parseInt(bookRecord.get("Quantity").get(0));
+            currentQuantity = Integer.parseInt(bookRecord.get("Quantity"));
+
             return currentQuantity > 0;
         }
+
         return false;
     }
 
 
 
-public static  void add_reservation() {
-    HashMap<String, String> reservation = new HashMap<>();
-    Scanner sc = new Scanner(System.in);
+public static  void add_reservation() throws SQLException {
+    HashMap<String, Object> reservation = new HashMap<>();
 
-    System.out.println("Enter the reservation ID>>");
-    String reservationId = sc.nextLine();
-    reservation.put("ReservationID", reservationId);
-    System.out.println("Enter the book ISBN>>");
-    String isbn = sc.nextLine();
-    reservation.put("BookISBN", isbn);
+    Display.Display_tables(db_Utilities.fetchAllRecords("Books", "",""));
     System.out.println("Enter the member ID>>");
-    String memberId = sc.nextLine();
-    reservation.put("MemberID", memberId);
+    int memberId = input.nextInt();
+    reservation.put("MemberID",String.valueOf( memberId));
+    System.out.println("Enter the book Id>>");
+    int id = input.nextInt();
+    reservation.put("BookID", String.valueOf(id));
     System.out.println("Enter the reservation date YY/MM/DD>>");
-    String date = sc.nextLine();
-    reservation.put("Date", date);
+    String date = input.next();
+    reservation.put("ReservationDate", date);
+    reservation.put("Reserved_Date",String.valueOf( transanction_services.getCurrentDateTime()));
     try {
-        if (isBookInStock(isbn)) {
-            db_Utilities.add_record(reservation, "reservations");
-            update_book_quantity(isbn, -1); // Decrease book quantity by 1
+        if (isBookInStock(id)) {
+            db_Utilities.add_record(reservation, "Reservation");
+            update_book_quantity(id, -1); // Decrease book quantity by 1
         } else {
             System.out.println("Book out of stock");
         }
     } catch (SQLException e) {
         System.out.println("An error has occurred: " + e.getMessage());
     }
-    sc.close();
-    try {
-        db_Utilities.add_record(reservation, "reservations");
-        update_book_quantity(isbn, -1); // Decrease book quantity by 1
-    } catch (SQLException e) {
-        System.out.println("An error has occurred: " + e.getMessage());
-    }
+
 }
 
 public static void update_reservation() throws SQLException {
-    HashMap<String, List<String>> record = db_Utilities.fetchAllRecords("reservations", "");
+    HashMap<String, List<String>> record = db_Utilities.fetchAllRecords("reservation", "","");
     if (record.isEmpty()) {
         System.out.println("No data found in this table");
     } else {
@@ -68,8 +64,8 @@ public static void update_reservation() throws SQLException {
         }
         System.out.println("Enter the reservation to be modified by specifying the ID");
         Scanner sc = new Scanner(System.in);
-        String reservationId = sc.nextLine();
-        String columnName[] = {"ReservationID", "BookISBN", "MemberID", "Date"};
+        int reservationId = sc.nextInt();
+        String columnName[] = {"ReservationID", "BookID", "MemberID", "Date"};
         String column;
 
         while (true) {
@@ -92,13 +88,13 @@ public static void update_reservation() throws SQLException {
         System.out.println("Enter the new value>>");
         String value = sc.nextLine();
 
-        HashMap<String, String> newRecord = new HashMap<>();
+        HashMap<String, Object> newRecord = new HashMap<>();
         newRecord.put(column, value);
-        db_Utilities.update_record(newRecord, "reservations", reservationId);
+        db_Utilities.update_record(newRecord, "reservation", reservationId);
     }
 }
 public static void  delete_reservation() throws SQLException {
-    HashMap<String, List<String>> record = db_Utilities.fetchAllRecords("reservations", "");
+    HashMap<String, List<String>> record = db_Utilities.fetchAllRecords("reservation", "","");
     if (record.isEmpty()) {
         System.out.println("NO RECORD WAS FOUND IN THIS TABLE");
     } else {
@@ -107,22 +103,21 @@ public static void  delete_reservation() throws SQLException {
         System.out.println("Enter the ID of the reservation you want to delete");
         Scanner sc = new Scanner(System.in);
         String reservationId = sc.nextLine();
-        System.out.println("Enter the book ISBN>>");
-        String isbn = sc.nextLine();
-        sc.close();
-        db_Utilities.delete_record("reservations", reservationId);
-        update_book_quantity(isbn, +1); // Increase book quantity by 1
+        System.out.println("Enter the book Id>>");
+        int id = sc.nextInt();
+        db_Utilities.delete_record("reservation", reservationId);
+        update_book_quantity(id, +1); // Increase book quantity by 1
     }
 }
 
-public static void update_book_quantity(String isbn, int quantityChange) throws SQLException {
-    HashMap<String, List<String>> bookRecord = db_Utilities.fetchAllRecords("books", isbn);
+public static void update_book_quantity(int id, int quantityChange) throws SQLException {
+    HashMap<String, List<String>> bookRecord = db_Utilities.fetchAllRecords("books", String.valueOf(id),"");
     if (!bookRecord.isEmpty()) {
-        int currentQuantity = Integer.parseInt(bookRecord.get("Quantity").get(0));
+        int currentQuantity = Integer.parseInt(bookRecord.get("Quantity").getFirst());
         int newQuantity = currentQuantity + quantityChange;
-        HashMap<String, String> updateRecord = new HashMap<>();
+        HashMap<String, Object> updateRecord = new HashMap<>();
         updateRecord.put("Quantity", String.valueOf(newQuantity));
-        db_Utilities.update_record(updateRecord, "books", isbn);
+        db_Utilities.update_record(updateRecord, "books", id);
     }
 }
 
@@ -137,17 +132,20 @@ public static void update_book_quantity(String isbn, int quantityChange) throws 
         "Back"
     };
     int choice;
+    while (true) { 
+        
+        Display.Display_menu(reservation_menu);
     System.out.println("Enter your choice:");
-    Scanner input = new Scanner(System.in);
+
     choice =input.nextInt();
-    input.close();
-    Display.Display_menu(reservation_menu);
+    
+   
     switch (choice) {
         case 1 -> {
             add_reservation();
         }
         case 2 -> {
-            Display.Display_tables(db_Utilities.fetchAllRecords("reservation", ""));
+            Display.Display_tables(db_Utilities.fetchAllRecords("reservation", "",""));
         }
         case 3 -> {
             update_reservation();
@@ -165,4 +163,5 @@ public static void update_book_quantity(String isbn, int quantityChange) throws 
     }
 
  }
+}
 }
